nixidy/generated/prod/seerr/Deployment-seerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: seerr
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: seerr
  name: seerr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: seerr
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: seerr
        app.kubernetes.io/instance: seerr
        app.kubernetes.io/name: seerr
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/seerr-team/seerr:develop@sha256:e49a2f222e48c7ccc30103b51cace3ef47111f57c251bca0366f2abf7e6f831e
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5055
            timeoutSeconds: 1
          name: seerr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5055
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5055
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /app/config
              name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      serviceAccountName: seerr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr
